# vai-jobspec-tools

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml  type-check.yaml
src/: vai_jobspec_tools.py
tests/: e2e_test.py
