[tool.poetry]
name = "vai-jobspec-tools"
version = "0.1.0"
description = "Utilities for VoxelAI jobspec containers"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
