[tool.poetry]
name = "vai-jobspec-tools"
version = "2.0.1"
description = "Utilities for VoxelAI jobspec containers"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

readme = "README.md"

homepage = "https://github.com/voxelai/vai-jobspec-tools"
repository = "https://github.com/voxelai/vai-jobspec-tools"
documentation = "https://github.com/voxelai/vai-jobspec-tools"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.3"
reorder-python-imports = "^3.12.0"
bump2version = "^1.0.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
