[tool.poetry]
name = "vai-jobspec-tools"
version = "2.1.0"
description = "Utilities for VoxelAI jobspec containers"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

readme = "README.md"

homepage = "https://github.com/voxelai/vai-jobspec-tools"
repository = "https://github.com/voxelai/vai-jobspec-tools"
documentation = "https://github.com/voxelai/vai-jobspec-tools"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
